# paddleocr-beam-api

./: .beamignore  .gitignore  CLOUDFLARE_R2_SETUP.md  README.md  S3_SETUP.md  app.py  deploy.py  pyproject.toml  test_beam.py
.claude/: CLAUDE.md
ocr/: __init__.py  artifacts.py  config.py  endpoints.py  io.py  metrics.py  pipeline.py  resources.py  sectioning.py  storage.py  vlm_server.py
